백테스트 - 조건, 결과 클래스 만듦

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "python.pythonPath": "C:\\python39-32\\python.exe"
+  "python.pythonPath": "C:\\python39-32\\python.exe",
+  "editor.formatOnSave": true,
+  "python.formatting.provider": "black"
 }
