이동평균 돌파 방식으로 매매 - 작업중

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "python.pythonPath": "C:\\python39-32\\python.exe",
-  "editor.formatOnSave": true,
-  "python.formatting.provider": "black"
+	"python.pythonPath": "C:\\python39-32\\python.exe",
+	"editor.formatOnSave": true,
+	"python.formatting.provider": "black",
+	"python.analysis.useImportHeuristic": true
 }
