--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"python.pythonPath": "C:\\python39-32\\python.exe",
 	"editor.formatOnSave": true,
-	"python.formatting.provider": "black",
-	"python.analysis.useImportHeuristic": true
+	"editor.wordWrap": "on",
+	"python.formatting.provider": "autopep8",
+	"python.formatting.autopep8Args": ["--max-line-length=200"]
 }
